--- a/backend/.env
+++ b/backend/.env
@@ -1,24 +1,24 @@
 # the name of the testnet
-FAUCET_CHAIN=gaia-7000
+FAUCET_CHAIN=testing
 
 # Google reCaptcha secret key
-FAUCET_RECAPTCHA_SECRET_KEY=PASTESECRETKEY
+FAUCET_RECAPTCHA_SECRET_KEY=6LdepKsUAAAAAMind2Vx1V3fjITAKzH1ZHOJWtFC
 
 # faucet backend url
 # hostname and port should match VUE_APP_CLAIM_URL in ../frontend/.env
 FAUCET_PUBLIC_URL=127.0.0.1:8000
 
 # how much faucetToken to send
-FAUCET_AMOUNT_FAUCET=10faucetToken
+FAUCET_AMOUNT_FAUCET=10validatortoken
 
 # how much steak to send
-FAUCET_AMOUNT_STEAK=1steak
+FAUCET_AMOUNT_STEAK=1stake
 
 # gaiacli account that holds the faucet funds
 FAUCET_KEY=default
 
 # gaiacli account password
-FAUCET_PASS=1234567890
+FAUCET_PASS=mtbc@123
 
 # full node that runs `gaiacli send`
-FAUCET_NODE=http://localhost:46657
+FAUCET_NODE=http://localhost:26657
