--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,8 @@
 # the name of the testnet
-VUE_APP_CHAIN=gaia-7000
+VUE_APP_CHAIN=testing
 
 # Google reCaptcha site key
-VUE_APP_RECAPTCHA_SITE_KEY=6LdqyV0UAAAAAEqgBxvSsDpL2aeTEgkz_VTz1Vi1
+VUE_APP_RECAPTCHA_SITE_KEY=6LdepKsUAAAAACwiXnqdBxdbtiZ0BQiuKXsDkg4A
 
 # faucet backend url (/claim)
 # hostname and port should match FAUCET_PUBLIC_URL in ../backend/.env
