--- a/backend/.env
+++ b/backend/.env
@@ -15,10 +15,10 @@ FAUCET_AMOUNT_FAUCET=10validatortoken
 FAUCET_AMOUNT_STEAK=1stake
 
 # gaiacli account that holds the faucet funds
-FAUCET_KEY=default
+FAUCET_KEY=cosmos12ypcl736v723y9mh8q886x5x9d6rmf27tcseyr
 
 # gaiacli account password
-FAUCET_PASS=mtbc@123
+FAUCET_PASS=12345678
 
 # full node that runs `gaiacli send`
 FAUCET_NODE=http://localhost:26657
